5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1585_1017.log
== SUBMITION (2019-03-23 17:59:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+(cos(g1)*cos(g2)*cos(g1-g2)))
print(d)

-- EXECUTION TIME:
0.179514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 10, in <module>
    d= r*arccos(sen(t1)*sen(t2)+(cos(g1)*cos(g2)*cos(g1-g2)))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:00:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos((sen(t1)*sen(t2)+(cos(g1)*cos(g2)*cos(g1-g2)))
print(d)

-- EXECUTION TIME:
0.195958
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 11
    print(d)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:00:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*acos((sen(t1)*sen(t2)+(cos(g1)*cos(g2)*cos(g1-g2)))
print(d)

-- EXECUTION TIME:
0.139156
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 11
    print(d)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:01:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(d)

-- EXECUTION TIME:
0.133907
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 10
    d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:01:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2)

-- EXECUTION TIME:
0.12669
-- ERROR:
  File "/home/codebench/codes/1585/1017/main.py", line 12
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:01:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2)

-- ERROR:
File "XXXX", line 12
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:01:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:01:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de P1: ")))
t2= radians(float(input("Latitude de P2: ")))
g2= radians(float(input("Longitude de P2: ")))
r= (float(6371.01))
d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.149609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 10, in <module>
    d= r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:02:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=(float(6371.01))
d=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.125759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 10, in <module>
    d=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:03:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=(float(6371.01))
d=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d=r*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:04:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=(float(6371.01))
d=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d=r*acos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 18:04:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1=radians(float(input("Latitude de P1: ")))
g1=radians(float(input("Longitude de P1: ")))
t2=radians(float(input("Latitude de P2: ")))
g2=radians(float(input("Longitude de P2: ")))
r=(float(6371.01))
d=r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d,2))

-- EXECUTION TIME:
0.172305
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
